--- a/safe_pay/paygate/templates/base.html
+++ b/safe_pay/paygate/templates/base.html
@@ -65,5 +65,54 @@
         </div>
       </nav>
     </header>
+
+    <div>{% block content %} {% endblock %}</div>
+
+    <footer class="page-footer dark">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-3">
+            <h5><a href="#">Home</a></h5>
+            <!-- <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Sign up</a></li>
+                <li><a href="#">Downloads</a></li>
+              </ul>  -->
+          </div>
+          <div class="col-sm-3">
+            <h5><a href="#">Features Provided</a></h5>
+            <!-- <ul>
+                <li><a href="#">Company Information</a></li>
+                <li><a href="#">Contact us</a></li>
+                <li><a href="#">Reviews</a></li>
+              </ul> -->
+          </div>
+          <div class="col-sm-3">
+            <h5><a href="#">Documentation</a></h5>
+            <!-- <ul>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Help desk</a></li>
+                <li><a href="#">Forums</a></li>
+              </ul> -->
+          </div>
+          <div class="col-sm-3">
+            <h5><a href="#">Simulation</a></h5>
+            <!-- <ul>
+                <li><a href="#">Terms of Service</a></li>
+                <li><a href="#">Terms of Use</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+              </ul> -->
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <p>© 2022 Copyright Text</p>
+      </div>
+    </footer>
+    <!-- End: Footer Dark -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
+    <script src="/assets/js/vanilla-zoom.js"></script>
+    <script src="/assets/js/theme.js"></script>
   </body>
 </html>
