--- a/safe_pay/paygate/templates/base.html
+++ b/safe_pay/paygate/templates/base.html
@@ -9,7 +9,19 @@
       name="description"
       content="Do your Transactions more securely than ever"
     />
+
+    {% comment %}
     <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css" />
+    {% endcomment %} {% comment %}
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    {% endcomment %} <link rel="stylesheet" href={%static
+    'static/css/bootstrap.min.css'%} />
+
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i"
@@ -23,8 +35,104 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css"
     />
 
-    <style></style>
-    {% block heads %} {% endblock %}
+    <style>
+      .vanilla-zoom {
+        width: 100%;
+        /*display: flex;*/
+      }
+
+      .vanilla-zoom .sidebar {
+        /*flex-basis: 30%;*/
+        width: 100%;
+        display: flex;
+        /*flex-direction: column;*/
+      }
+
+      .vanilla-zoom .sidebar img.small-preview {
+        width: 60px;
+        margin-right: 5px;
+        cursor: pointer;
+        opacity: 0.5;
+      }
+
+      .vanilla-zoom .sidebar img.small-preview.active,
+      .vanilla-zoom .sidebar img.small-preview:hover {
+        opacity: 1;
+      }
+
+      .vanilla-zoom .sidebar img.small-preview:last-child {
+        margin-right: 0;
+      }
+
+      .vanilla-zoom .zoomed-image {
+        width: 100%;
+        height: 300px;
+        flex: 1;
+        background-repeat: no-repeat;
+        background-position: left center;
+        background-size: contain;
+        margin-bottom: 5px;
+      }
+
+      .top_container {
+        width: 100%;
+        height: 100%;
+        /* background-color: #fff;
+            position: relative;
+            overflow: hidden; */
+        margin-top: -50px;
+      }
+      .my_container {
+        background-color: #ebdffa;
+      }
+      .mytop {
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        height: 99vh;
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        justify-content: left;
+        position: relative;
+      }
+      .text {
+        color: #000;
+        font-weight: bold;
+        margin-left: 20px;
+        margin-top: -200px;
+      }
+      .text p {
+        font-size: 1.5rem;
+        width: 500px;
+        font-weight: normal;
+      }
+      .text h2 {
+        font-size: 2.5rem;
+        font-weight: 900;
+      }
+
+      .my_icon {
+        width: 50px;
+        height: 50px;
+        position: absolute;
+        left: -12px;
+        top: 12px;
+      }
+      .my_row {
+        margin-left: 60px;
+      }
+      .text-info {
+        color: #470787 !important;
+        font-weight: bold;
+      }
+      .simulation {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+      }
+    </style>
   </head>
   <body id="mybody">
     <header id="my header">
@@ -66,7 +174,27 @@
       </nav>
     </header>
 
-    <div>{% block content %} {% endblock %}</div>
+    <main class="page landing-page">
+      <div class="top_container my_container">
+        <section class="mytop">
+          <img
+            class="mytop"
+            src="{% static 'images/Group 13.svg'%}"
+            alt="Payment"
+          />
+          <div class="text">
+            <h2>
+              Just do transactions, <br />
+              leave Security on us
+            </h2>
+            <p>
+              Accept payments from anywhere within a fraction of second without
+              hampering the security
+            </p>
+          </div>
+        </section>
+      </div>
+    </main>
 
     <footer class="page-footer dark">
       <div class="container">
