--- a/safe_pay/paygate/templates/payment-page.html
+++ b/safe_pay/paygate/templates/payment-page.html
@@ -11470,7 +11470,15 @@
               between a sender and a reciever.
             </p>
           </div>
-          <div class="simulation">
+          <div
+            class="simulation"
+            style="
+              display: flex;
+              flex-direction: row;
+              justify-content: center;
+              align-items: center;
+            "
+          >
             <form>
               <div class="card-details">
                 <h3 class="title">Card Details of Sender</h3>
