--- a/safe_pay/paygate/templates/base.html
+++ b/safe_pay/paygate/templates/base.html
@@ -11465,7 +11465,20 @@
 
     <main class="page landing-page">
       <div class="top_container my_container">
-        <section class="mytop">
+        <section
+          class="mytop"
+          style="
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+            height: 99vh;
+            display: flex;
+            align-items: center;
+            flex-direction: row;
+            justify-content: left;
+            position: relative;
+          "
+        >
           <img
             class="mytop"
             src="{% static 'images/Group 13.svg' %}"
