--- a/safe_pay/paygate/templates/base.html
+++ b/safe_pay/paygate/templates/base.html
@@ -11483,6 +11483,17 @@
             class="mytop"
             src="{% static 'images/Group 13.svg' %}"
             alt="Payment"
+            style="
+              background-repeat: no-repeat;
+              background-position: center;
+              background-size: cover;
+              height: 99vh;
+              display: flex;
+              align-items: center;
+              flex-direction: row;
+              justify-content: left;
+              position: relative;
+            "
           />
           <div class="text">
             <h2>
