--- a/safe_pay/paygate/templates/base.html
+++ b/safe_pay/paygate/templates/base.html
@@ -11468,6 +11468,7 @@
         <section
           class="mytop"
           style="
+            background-image: url('{{STATIC_URL}} images/Group_13.svg');
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
@@ -11479,22 +11480,6 @@
             position: relative;
           "
         >
-          <img
-            class="mytop"
-            src="{% static 'images/Group 13.svg' %}"
-            alt="Payment"
-            style="
-              background-repeat: no-repeat;
-              background-position: center;
-              background-size: cover;
-              height: 99vh;
-              display: flex;
-              align-items: center;
-              flex-direction: row;
-              justify-content: left;
-              position: relative;
-            "
-          />
           <div class="text">
             <h2>
               Just do transactions, <br />
