--- a/safe_pay/paygate/templates/base.html
+++ b/safe_pay/paygate/templates/base.html
@@ -11468,7 +11468,7 @@
         <section
           class="mytop"
           style="
-            background-image: url('{{STATIC_URL}} images/Group_13.svg');
+            background-image: url('{% static "images/Group-13.svg" %}');
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
