still sorting images 😩

--- a/safe_pay/paygate/templates/features.html
+++ b/safe_pay/paygate/templates/features.html
@@ -11473,7 +11473,7 @@
           <div class="row justify-content-center my_row">
             <div class="col-md-5 feature-box">
               <!-- <i class="icon-star icon"></i> -->
-              <img class="my_icon" img src="assets/img/Animation.gif"></img>
+              <img class="my_icon" src="{% static 'paygate/images/Animation.gif' %}">
               <h4>API Driven</h4>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
