--- a/safe_pay/paygate/templates/payment-page.html
+++ b/safe_pay/paygate/templates/payment-page.html
@@ -11480,20 +11480,22 @@
               align-items: center;
             "
           >
-            <form>
+            <form method="POST">
+              
+              {% csrf_token %}
               <div class="card-details">
                 <h3 class="title">Card Details of Sender</h3>
                 <div class="row">
                   <div class="col-sm-7">
                     <div class="mb-3">
-                      <label class="form-label" for="card_number"
-                        >Card Number</label
-                      ><input
+                      <label class="form-label" for="card_number">Card Number</label>
+                      <input
                         class="form-control"
                         type="text"
-                        id="card_number"
+                        id="sender_accno"
                         placeholder="Card Number"
-                        name="card_number"
+                        name="sender_accno"
+                        value="{{ form.sender_accno }}"
                       />
                     </div>
                   </div>
