--- a/paygate/templates/home.html
+++ b/paygate/templates/home.html
@@ -1,17 +1,18 @@
 {% load static %}
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
-    />
-    <title>Payment - SafePay</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
       content="Do your Transactions more securely than ever"
     />
+
+    {% comment %}
+    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css" />
+    {% endcomment %}
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -31,10 +32,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css"
     />
-    {% comment %}
-    <link rel="stylesheet" href="/assets/css/vanilla-zoom.min.css" />
-    <link rel="stylesheet" href="/assets/css/styles.css" />
-    {% endcomment %}
+
     <style>
       @import url(https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i);
       /*!
@@ -11425,209 +11423,110 @@
       }
     </style>
   </head>
-
-  <body>
-    <nav
-      class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar"
-    >
-      <div class="container">
-        <a class="navbar-brand logo" href="#">SafePay</a
-        ><button
-          data-bs-toggle="collapse"
-          class="navbar-toggler"
-          data-bs-target="#navcol-1"
-        >
-          <span class="visually-hidden">Toggle navigation</span
-          ><span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navcol-1">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="/index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/features.html">API Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/faq.html">API Documentation</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="/payment-page.html"
-                >Payment Simulation</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/about-us.html">About Us</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <main class="page payment-page">
-      <section class="clean-block payment-form dark">
+  <body id="mybody">
+    <header id="my header">
+      <nav
+        class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar"
+      >
         <div class="container">
-          <div class="block-heading">
-            <h2 class="text-info">Payment Gateway Simulation</h2>
+          <a class="navbar-brand logo" href="#">SafePay</a
+          ><button
+            data-bs-toggle="collapse"
+            class="navbar-toggler"
+            data-bs-target="#navcol-1"
+          >
+            <span class="visually-hidden">Toggle navigation</span
+            ><span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navcol-1">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link active" href="{% url 'home' %}">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'features' %}">API Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/faq.html">API Documentation</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'pay' %}"
+                  >Payment Simulation</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/about-us.html">About Us</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <main class="page landing-page">
+      <div class="top_container my_container">
+        <section
+          class="mytop"
+          style="
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+            height: 99vh;
+            display: flex;
+            align-items: center;
+            flex-direction: row;
+            justify-content: left;
+            position: relative;
+          "
+        >
+          <div class="text">
+            <h2>
+              Just do transactions, <br />
+              leave Security on us
+            </h2>
             <p>
-              This is a simple simulation that shows a transaction being done
-              between a sender and a reciever.
+              Accept payments from anywhere within a fraction of second without
+              hampering the security
             </p>
           </div>
-          <div
-            class="simulation"
-            style="
-              display: flex;
-              flex-direction: row;
-              justify-content: center;
-              align-items: center;
-            "
-          >
-            <form method="POST">
-              
-              {% csrf_token %}
-              <div class="card-details">
-                <h3 class="title">Card Details of Sender</h3>
-                <div class="row">
-                  <div class="col-sm-7">
-                    <div class="mb-3">
-                      <label class="form-label" for="card_number">Card Number</label>
-                      <input
-                        class="form-control"
-                        type="text"
-                        id="sender_accno"
-                        placeholder="Card Number"
-                        name="sender_accno"
-                        value="{{ form.sender_accno }}"
-                      />
-                    </div>
-                  </div>
-                  <div class="col-sm-5">
-                    <div class="mb-3">
-                      <label class="form-label">Expiration date</label>
-                      <div class="input-group expiration-date">
-                        <input
-                          class="form-control"
-                          type="text"
-                          placeholder="MM"
-                          name="expiration_month"
-                        /><input
-                          class="form-control"
-                          type="text"
-                          placeholder="YY"
-                          name="expiration_year"
-                        />
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-sm-7">
-                    <div class="mb-3">
-                      <label class="form-label" for="amount">Amount</label
-                      ><input
-                        class="form-control"
-                        type="text"
-                        id="amount"
-                        placeholder="Amount"
-                        name="amount"
-                      />
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="mb-3">
-                      <label class="form-label" for="cvv">CVV</label
-                      ><input
-                        class="form-control"
-                        type="text"
-                        id="cvv"
-                        placeholder="CVV"
-                        name="cvv"
-                      />
-                    </div>
-                  </div>
-                </div>
-                <h3 class="title">Details of Reciever</h3>
-                <div class="row">
-                  <div class="col-sm-7">
-                    <div class="mb-3">
-                      <label class="form-label" for="card_number"
-                        >Account Number</label
-                      ><input
-                        class="form-control"
-                        type="text"
-                        id="card_number"
-                        placeholder="Card Number"
-                        name="card_number"
-                      />
-                    </div>
-                  </div>
-                  <div class="col-sm-12">
-                    <div class="mb-3">
-                      <button
-                        class="btn btn-primary d-block w-100"
-                        type="submit"
-                      >
-                        Proceed
-                      </button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </form>
-
-            <form>
-              <div class="products">
-                <h3 class="title">Transaction Between Sender and Reciever</h3>
-                <div class="item">
-                  <span class="price">$200</span>
-                  <p class="item-name">Sender's Balance</p>
-                </div>
-                <div class="item">
-                  <span class="price">$120</span>
-                  <p class="item-name">Recievers's Balance</p>
-                </div>
-                <!-- <div class="total">
-                <span>Total</span><span class="price">$320</span>
-              </div> -->
-              </div>
-            </form>
-          </div>
-        </div>
-      </section>
+        </section>
+      </div>
     </main>
-    <!-- Start: Footer Dark -->
+
     <footer class="page-footer dark">
       <div class="container">
         <div class="row">
           <div class="col-sm-3">
-            <h5>Get started</h5>
-            <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Sign up</a></li>
-              <li><a href="#">Downloads</a></li>
-            </ul>
+            <h5><a href="#">Home</a></h5>
+            <!-- <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Sign up</a></li>
+                <li><a href="#">Downloads</a></li>
+              </ul>  -->
           </div>
           <div class="col-sm-3">
-            <h5>About us</h5>
-            <ul>
-              <li><a href="#">Company Information</a></li>
-              <li><a href="#">Contact us</a></li>
-              <li><a href="#">Reviews</a></li>
-            </ul>
+            <h5><a href="#">Features Provided</a></h5>
+            <!-- <ul>
+                <li><a href="#">Company Information</a></li>
+                <li><a href="#">Contact us</a></li>
+                <li><a href="#">Reviews</a></li>
+              </ul> -->
           </div>
           <div class="col-sm-3">
-            <h5>Support</h5>
-            <ul>
-              <li><a href="#">FAQ</a></li>
-              <li><a href="#">Help desk</a></li>
-              <li><a href="#">Forums</a></li>
-            </ul>
+            <h5><a href="#">Documentation</a></h5>
+            <!-- <ul>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Help desk</a></li>
+                <li><a href="#">Forums</a></li>
+              </ul> -->
           </div>
           <div class="col-sm-3">
-            <h5>Legal</h5>
-            <ul>
-              <li><a href="#">Terms of Service</a></li>
-              <li><a href="#">Terms of Use</a></li>
-              <li><a href="#">Privacy Policy</a></li>
-            </ul>
+            <h5><a href="#">Simulation</a></h5>
+            <!-- <ul>
+                <li><a href="#">Terms of Service</a></li>
+                <li><a href="#">Terms of Use</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+              </ul> -->
           </div>
         </div>
       </div>
