finally images sort
home + features page

--- a/paygate/templates/features.html
+++ b/paygate/templates/features.html
@@ -11419,6 +11419,8 @@
           transform: rotate(45deg);
         }
       }
+  }
+
     </style>
   </head>
 
@@ -11470,7 +11472,11 @@
           <div class="row justify-content-center my_row">
             <div class="col-md-5 feature-box">
               <!-- <i class="icon-star icon"></i> -->
-              <img class="my_icon" src="{% static 'paygate/images/Animation.gif' %}">
+              <img class="my_icon" style="width: 50px;
+              height: 50px;
+              position: absolute;
+              left: -12px;
+              top: 12px;" src="{% static 'paygate/images/Animation.gif' %}">
               <h4>API Driven</h4>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
@@ -11479,7 +11485,11 @@
             </div>
             <div class="col-md-5 feature-box">
               <!-- <i class="icon-pencil icon"></i> -->
-              <img class="my_icon" img src="assets/img/Animation_2.gif"></img>
+              <img class="my_icon" style="width: 50px;
+              height: 50px;
+              position: absolute;
+              left: -12px;
+              top: 12px;" src="{% static 'paygate/images/Animation_2.gif' %}"></img>
               <h4>Instant Activation</h4>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
@@ -11488,7 +11498,11 @@
             </div>
             <div class="col-md-5 feature-box">
               <!-- <i class="icon-screen-smartphone icon"></i> -->
-              <img class="my_icon" img src="assets/img/Animation_3.gif"></img>
+              <img class="my_icon" style="width: 50px;
+              height: 50px;
+              position: absolute;
+              left: -12px;
+              top: 12px;" src="{% static 'paygate/images/Animation_3.gif' %}"></img>
               <h4>Security</h4>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
@@ -11497,7 +11511,11 @@
             </div>
             <div class="col-md-5 feature-box">
               <!-- <i class="icon-refresh icon"></i> -->
-              <img class="my_icon" img src="assets/img/Animation_4.gif"></img>
+              <img class="my_icon" style="width: 50px;
+              height: 50px;
+              position: absolute;
+              left: -12px;
+              top: 12px;" src="{% static 'paygate/images/Animation_4.gif' %}"></img>
               <h4>Best Customer Support</h4>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
