--- a/paygate/templates/home.html
+++ b/paygate/templates/home.html
@@ -11468,6 +11468,7 @@
         <section
           class="mytop"
           style="
+            background-image: url('{% static "paygate/images/Group-13.svg" %}');
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
@@ -11479,12 +11480,18 @@
             position: relative;
           "
         >
-          <div class="text">
-            <h2>
+          <div class="text" style="color: #000;
+          font-weight: bold;
+          margin-left: 20px;
+          margin-top: -200px">
+            <h2 style="font-size: 2.5rem;
+            font-weight: 900;">
               Just do transactions, <br />
               leave Security on us
             </h2>
-            <p>
+            <p style="font-size: 1.5rem;
+            width:500px;
+            font-weight: normal;">
               Accept payments from anywhere within a fraction of second without
               hampering the security
             </p>
