--- a/paygate/templates/home.html
+++ b/paygate/templates/home.html
@@ -61,7 +61,7 @@
                 <a class="nav-link" href="{% url 'features' %}">API Features</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'doc' %}">API Documentation</a>
+                <a class="nav-link" href="/faq.html">API Documentation</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'pay' %}"
