--- a/paygate/templates/payment-page.html
+++ b/paygate/templates/payment-page.html
@@ -18,6 +18,11 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
 
     <link
       rel="stylesheet"
@@ -79,6 +84,23 @@
       </div>
     </nav>
     <main class="page payment-page">
+      {% for message in messages %}
+      <div class="mess" style="margin: 0px 30px">
+        <div class="container-fluid p-0">
+          <div class="alert {{ message.tags }} alert-dismissible" role="alert">
+            <button
+              type="button"
+              class="close"
+              data-dismiss="alert"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+            {{ message }}
+          </div>
+        </div>
+      </div>
+      {% endfor %}
       <section class="clean-block payment-form dark">
         <div class="container">
           <div class="block-heading">
@@ -198,43 +220,43 @@
             </form>
 
             {% if sender_amount %}
-              <form>
-                <div class="products">
-                  <h3 class="title">Transaction Between Sender and Reciever</h3>
-                  <div class="item">
-                    <span class="price">{{ sender_amount }}</span>
-                    <p class="item-name">Sender's Balance</p>
-                  </div>
-                  <div class="item">
-                    <span class="price">{{ receiver_amount }}</span>
-                    <p class="item-name">Recievers's Balance</p>
-                  </div>
-                  <!-- <div class="total">
+            <form>
+              <div class="products">
+                <h3 class="title">Transaction Between Sender and Reciever</h3>
+                <div class="item">
+                  <span class="price">{{ sender_amount }}</span>
+                  <p class="item-name">Sender's Balance</p>
+                </div>
+                <div class="item">
+                  <span class="price">{{ receiver_amount }}</span>
+                  <p class="item-name">Recievers's Balance</p>
+                </div>
+                <!-- <div class="total">
                   <span>Total</span><span class="price">$320</span>
                 </div> -->
-                </div>
-              </form>
+              </div>
+            </form>
 
             {% else %}
 
-              <form>
-                <div class="products">
-                  <h3 class="title">Transaction Between Sender and Reciever</h3>
-                  <div class="item">
-                    <span class="price">$200</span>
-                    <p class="item-name">Sender's Balance</p>
-                  </div>
-                  <div class="item">
-                    <span class="price">$120</span>
-                    <p class="item-name">Recievers's Balance</p>
-                  </div>
-                  <!-- <div class="total">
+            <form>
+              <div class="products">
+                <h3 class="title">Transaction Between Sender and Reciever</h3>
+                <div class="item">
+                  <span class="price">$200</span>
+                  <p class="item-name">Sender's Balance</p>
+                </div>
+                <div class="item">
+                  <span class="price">$120</span>
+                  <p class="item-name">Recievers's Balance</p>
+                </div>
+                <!-- <div class="total">
                   <span>Total</span><span class="price">$320</span>
                 </div> -->
-                </div>
-              </form>
+              </div>
+            </form>
 
-              {% endif %}
+            {% endif %}
           </div>
         </div>
       </section>
