--- a/paygate/templates/home.html
+++ b/paygate/templates/home.html
@@ -38,6 +38,7 @@
     />
   </head>
   <body id="mybody">
+    {% comment %} HEADER {% endcomment %}
     <header id="my header">
       <nav
         class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar"
@@ -67,9 +68,6 @@
                 <a class="nav-link" href="{% url 'pay' %}"
                   >Payment Simulation</a
                 >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/about-us.html">About Us</a>
               </li>
             </ul>
           </div>
