--- a/paygate/templates/payment-page.html
+++ b/paygate/templates/payment-page.html
@@ -36,10 +36,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css"
     />
-    {% comment %}
-    <link rel="stylesheet" href="/assets/css/vanilla-zoom.min.css" />
-    <link rel="stylesheet" href="/assets/css/styles.css" />
-    {% endcomment %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
+    <script src="{% static 'paygate/js/vanilla-zoom.js' %}"></script>
+    <script src="{% static 'paygate/js/theme.js' %}"></script>
     <link
       rel="stylesheet"
       href="{% static 'paygate/css/bootstrap.min.css' %}"
@@ -82,23 +82,17 @@
     <main class="page payment-page">
       <section class="clean-block payment-form dark">
         {% for message in messages %}
-        <div class="mess" style="margin: 0px 30px">
-          <div class="container-fluid p-0">
-            <div
-              class="alert {{ message.tags }} alert-dismissible"
-              role="alert"
-            >
-              <button
-                type="button"
-                class="close"
-                data-dismiss="alert"
-                aria-label="Close"
-              >
-                <span aria-hidden="true">&times;</span>
-              </button>
-              {{ message }}
-            </div>
-          </div>
+        <div
+          class="alert {{message.tags}} alert-dismissible fade show"
+          role="alert"
+        >
+          {{message}}
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="alert"
+            aria-label="Close"
+          ></button>
         </div>
         {% endfor %}
         <div class="container">
@@ -289,9 +283,5 @@
       </div>
     </footer>
     <!-- End: Footer Dark -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
-    <script src="{% static 'paygate/js/vanilla-zoom.js' %}"></script>
-    <script src="{% static 'paygate/js/theme.js' %}"></script>
   </body>
 </html>
