--- a/paygate/templates/payment-page.html
+++ b/paygate/templates/payment-page.html
@@ -184,30 +184,31 @@
                       </div>
                     </div>
                   </div>
-                </div>
-                <h3 class="title">Details of Reciever</h3>
-                <div class="row">
-                  <div class="col-sm-7">
-                    <div class="mb-3">
-                      <label class="form-label" for="card_number"
-                        >Account Number</label
-                      ><input
-                        class="form-control"
-                        type="text"
-                        id="receiver_accno"
-                        placeholder="Card Number"
-                        name="receiver_accno"
-                      />
+
+                  <h3 class="title">Details of Reciever</h3>
+                  <div class="row">
+                    <div class="col-sm-7">
+                      <div class="mb-3">
+                        <label class="form-label" for="card_number"
+                          >Account Number</label
+                        ><input
+                          class="form-control"
+                          type="text"
+                          id="receiver_accno"
+                          placeholder="Card Number"
+                          name="receiver_accno"
+                        />
+                      </div>
                     </div>
-                  </div>
-                  <div class="col-sm-12">
-                    <div class="mb-3">
-                      <button
-                        class="btn btn-primary d-block w-100"
-                        type="submit"
-                      >
-                        Proceed
-                      </button>
+                    <div class="col-sm-12">
+                      <div class="mb-3">
+                        <button
+                          class="btn btn-primary d-block w-100"
+                          type="submit"
+                        >
+                          Proceed
+                        </button>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -219,11 +220,11 @@
               <div class="products">
                 <h3 class="title">Transaction Between Sender and Reciever</h3>
                 <div class="item">
-                  <span class="price">{{ sender_amount }}</span>
+                  <span class="price">{{ sender_amount }} Rs.</span>
                   <p class="item-name">Sender's Balance</p>
                 </div>
                 <div class="item">
-                  <span class="price">{{ receiver_amount }}</span>
+                  <span class="price">{{ receiver_amount }} Rs.</span>
                   <p class="item-name">Recievers's Balance</p>
                 </div>
                 <!-- <div class="total">
@@ -238,11 +239,11 @@
               <div class="products">
                 <h3 class="title">Transaction Between Sender and Reciever</h3>
                 <div class="item">
-                  <span class="price">$200</span>
+                  <span class="price">500 Rs.</span>
                   <p class="item-name">Sender's Balance</p>
                 </div>
                 <div class="item">
-                  <span class="price">$120</span>
+                  <span class="price">100 Rs.</span>
                   <p class="item-name">Recievers's Balance</p>
                 </div>
                 <!-- <div class="total">
@@ -281,7 +282,7 @@
         </div>
       </div>
       <div class="footer-copyright">
-        <p>© 2022 Copyright Text</p>
+        <p>© 2022 SafePay Copyright</p>
       </div>
     </footer>
     <!-- End: Footer Dark -->
