--- a/paygate/templates/api-documentation.html
+++ b/paygate/templates/api-documentation.html
@@ -77,51 +77,73 @@
       <section class="clean-block clean-faq dark">
         <div class="container">
           <div class="block-heading">
-            <h2 class="text-info">FAQ</h2>
+            <h2 class="text-info">API Reference Guide</h2>
+            {% comment %}
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam
               urna, dignissim nec auctor in, mattis vitae leo.
             </p>
+            {% endcomment %}
           </div>
           <div class="block-content">
             <div class="faq-item">
-              <h4 class="question">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-              </h4>
-              <div class="answer">
+              <div class="question">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                  quam urna, dignissim nec auctor in, mattis vitae leo. Lorem
-                  ipsum dolor sit amet, consectetur adipiscing elit.
-                </p>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                  quam urna, dignissim nec auctor in, mattis vitae leo. Lorem
-                  ipsum dolor sit amet, consectetur adipiscing elit.
+                  SafePay's API is completely RESTful and all our responses are
+                  returned in JSON.
                 </p>
               </div>
             </div>
             <div class="faq-item">
-              <h4 class="question">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-              </h4>
-              <div class="answer">
+              <div class="question">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                  quam urna, dignissim nec auctor in, mattis vitae leo.
+                  The SafePay API is deployed, so all you need to do is perform
+                  a HTTP request to the API endpoint.
                 </p>
               </div>
             </div>
+            <ol>
+              <li>
+                <div class="faq-item">
+                  <div class="answer">
+                    <p>HTTP Method: POST</p>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="faq-item">
+                  <div class="answer">
+                    <p>Endpoint: /api</p>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="faq-item">
+                  <div class="answer">
+                    <p>
+                      Json Body contains these inputs: - Sender's Account
+                      Number, CVV, Expiry Date, Amount and Receiver's Account
+                      Number
+                    </p>
+                  </div>
+                </div>
+              </li>
+            </ol>
+
             <div class="faq-item">
-              <h4 class="question">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-              </h4>
+              <h4 class="question">Example Request:</h4>
               <div class="answer">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                  quam urna, dignissim nec auctor in, mattis vitae leo. Lorem
-                  ipsum dolor sit amet, consectetur adipiscing elit.&nbsp;Lorem
-                  ipsum dolor sit amet, consectetur adipiscing elit.
+                  curl --location --request POST 'http://127.0.0.1:8000/api'
+                  <br />
+                  --header 'Content-Type: application/json'<br />
+                  --data-raw '{ <br />
+                  "sender_accno": 7731760391, <br />
+                  "cvv": 112, <br />
+                  "exp_date": "18/12/25", <br />
+                  "amount": 1, <br />
+                  "rec_accno": 2908566021 <br />
+                  }'
                 </p>
               </div>
             </div>
@@ -154,7 +176,7 @@
         </div>
       </div>
       <div class="footer-copyright">
-        <p>© 2022 Copyright Text</p>
+        <p>© 2022 SafePay Copyright</p>
       </div>
     </footer>
     <!-- End: Footer Dark -->
