footer small change

--- a/paygate/templates/features.html
+++ b/paygate/templates/features.html
@@ -162,7 +162,7 @@
         </div>
       </div>
     <div class="footer-copyright">
-      <p>© 2022 Copyright Text</p>
+      <p>© 2022 SafePay Copyright</p>
     </div>
   </footer>
     <!-- End: Footer Dark -->
