--- a/paygate/templates/api-documentation.html
+++ b/paygate/templates/api-documentation.html
@@ -39,6 +39,7 @@
       rel="stylesheet"
       href="{% static 'paygate/css/bootstrap.min.css' %}"
     />
+    <link rel="stylesheet" href="{% static 'paygate/css/animate.css' %}" />
   </head>
 
   <body>
@@ -85,7 +86,7 @@
             </p>
             {% endcomment %}
           </div>
-          <div class="block-content">
+          <div class="block-content text-focus-in">
             <div class="faq-item">
               <div class="question">
                 <p>
