--- a/paygate/templates/features.html
+++ b/paygate/templates/features.html
@@ -92,8 +92,7 @@
               top: 12px;" src="{% static 'paygate/images/Animation.gif' %}">
               <h4>API Driven</h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                quam urna, dignissim nec auctor in, mattis vitae leo.
+                You can leverage powerful state-of-the-art technologies and integrate them into your applications.
               </p>
             </div>
             <div class="col-md-5 feature-box">
@@ -105,8 +104,7 @@
               top: 12px;" src="{% static 'paygate/images/Animation_2.gif' %}"></img>
               <h4>Instant Activation</h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                quam urna, dignissim nec auctor in, mattis vitae leo.
+                Hassle-free seamless activation anytime, anywhere
               </p>
             </div>
             <div class="col-md-5 feature-box">
@@ -128,11 +126,10 @@
               height: 50px;
               position: absolute;
               left: -12px;
-              top: 12px;" src="{% static 'paygate/images/Animation_4.gif' %}"></img>
-              <h4>Best Customer Support</h4>
+              top: 12px;" src="{% static 'paygate/images/Animation_5.gif' %}"></img>
+              <h4>Best Speed</h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                quam urna, dignissim nec auctor in, mattis vitae leo.
+                High Speed
               </p>
             </div>
           </div>
