--- a/paygate/templates/features.html
+++ b/paygate/templates/features.html
@@ -116,8 +116,7 @@
               top: 12px;" src="{% static 'paygate/images/Animation_3.gif' %}"></img>
               <h4>Security</h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                quam urna, dignissim nec auctor in, mattis vitae leo.
+                Designed with your privacy and security in mind
               </p>
             </div>
             <div class="col-md-5 feature-box">
@@ -129,7 +128,7 @@
               top: 12px;" src="{% static 'paygate/images/Animation_5.gif' %}"></img>
               <h4>Best Speed</h4>
               <p>
-                High Speed
+                Oh. So. Fast
               </p>
             </div>
           </div>
