last few changes. hopefully

--- a/paygate/templates/api-documentation.html
+++ b/paygate/templates/api-documentation.html
@@ -78,7 +78,9 @@
       <section class="clean-block clean-faq dark">
         <div class="container">
           <div class="block-heading">
-            <h2 class="text-info">API Reference Guide</h2>
+            <h2 class="text-info" style="color: #6544aa !important">
+              API Reference Guide
+            </h2>
             {% comment %}
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam
