--- a/paygate/templates/features.html
+++ b/paygate/templates/features.html
@@ -76,7 +76,7 @@
       <section class="clean-block features">
         <div class="container">
           <div class="block-heading">
-            <h2 class="text-info">Features</h2>
+            <h2 class="text-info" style="color:#6544aa !important">Features</h2>
             <p>
               Give your company all of the tools it needs to accept online
               payments and provide the greatest client experience.
@@ -116,7 +116,7 @@
               top: 12px;" src="{% static 'paygate/images/Animation_3.gif' %}"></img>
               <h4>Security</h4>
               <p>
-                Designed with your privacy and security in mind
+                Impenetrable cutting edge security designed with user privacy in mind
               </p>
             </div>
             <div class="col-md-5 feature-box">
