--- a/paygate/templates/payment-page.html
+++ b/paygate/templates/payment-page.html
@@ -97,7 +97,9 @@
         {% endfor %} {% endif %}
         <div class="container">
           <div class="block-heading">
-            <h2 class="text-info">Payment Gateway Simulation</h2>
+            <h2 class="text-info" style="color: #6544aa !important">
+              Payment Gateway Simulation
+            </h2>
             <p>
               This is a simple simulation that shows a transaction being done
               between a sender and a reciever.
