--- a/paygate/templates/api-documentation.html
+++ b/paygate/templates/api-documentation.html
@@ -45,6 +45,7 @@
   <body>
     <nav
       class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar"
+      style="background-color: #e0dfe0 !important"
     >
       <div class="container">
         <a class="navbar-brand logo" href="#">SafePay</a
@@ -155,7 +156,7 @@
       </section>
     </main>
     <!-- Start: Footer Dark -->
-    <footer class="page-footer dark">
+    <footer class="page-footer dark" style="background-color: #322058">
       <div
         class="my_row"
         style="
@@ -178,7 +179,10 @@
           <h5><a href="{% url 'pay' %}">Simulation</a></h5>
         </div>
       </div>
-      <div class="footer-copyright">
+      <div
+        class="footer-copyright"
+        style="background-color: #322058; border-color: #322058"
+      >
         <p>© 2022 SafePay Copyright</p>
       </div>
     </footer>
