--- a/paygate/templates/payment-page.html
+++ b/paygate/templates/payment-page.html
@@ -50,6 +50,7 @@
     {% comment %} HEADER {% endcomment %}
     <nav
       class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar"
+      style="background-color: #e0dfe0 !important"
     >
       <div class="container">
         <a class="navbar-brand logo" href="#">SafePay</a
@@ -114,7 +115,10 @@
               align-items: center;
             "
           >
-            <form method="POST">
+            <form
+              method="POST"
+              style="border-top: 2px solid #6544aa !important"
+            >
               {% csrf_token %}
               <div class="card-details">
                 <div>
@@ -207,6 +211,7 @@
                         <button
                           class="btn btn-primary d-block w-100"
                           type="submit"
+                          style="background-color: #6544aa; color: #d1c4e7"
                         >
                           Proceed
                         </button>
@@ -218,7 +223,7 @@
             </form>
 
             {% if sender_amount %}
-            <form>
+            <form style="border-top: 2px solid #6544aa !important">
               <div class="products">
                 <h3 class="title">Transaction Between Sender and Reciever</h3>
                 <div class="item">
@@ -229,15 +234,12 @@
                   <span class="price">{{ receiver_amount }} Rs.</span>
                   <p class="item-name">Recievers's Balance</p>
                 </div>
-                <!-- <div class="total">
-                  <span>Total</span><span class="price">$320</span>
-                </div> -->
               </div>
             </form>
 
             {% else %}
 
-            <form>
+            <form style="border-top: 2px solid #6544aa !important">
               <div class="products">
                 <h3 class="title">Transaction Between Sender and Reciever</h3>
                 <div class="item">
@@ -248,9 +250,6 @@
                   <span class="price">100 Rs.</span>
                   <p class="item-name">Recievers's Balance</p>
                 </div>
-                <!-- <div class="total">
-                  <span>Total</span><span class="price">$320</span>
-                </div> -->
               </div>
             </form>
 
@@ -260,7 +259,7 @@
       </section>
     </main>
     <!-- Start: Footer Dark -->
-    <footer class="page-footer dark">
+    <footer class="page-footer dark" style="background-color: #322058">
       <div
         class="my_row"
         style="
@@ -283,7 +282,10 @@
           <h5><a href="{% url 'pay' %}">Simulation</a></h5>
         </div>
       </div>
-      <div class="footer-copyright">
+      <div
+        class="footer-copyright"
+        style="background-color: #322058; border-color: #322058"
+      >
         <p>© 2022 SafePay Copyright</p>
       </div>
     </footer>
